# ansible-nd

./: .gitignore  .mcp.json  ANALYSIS_ENDPOINT_PARAMETERS.md  ANALYSIS_SOLID_ND.md  ANALYSIS_SOLID_NDv2.md  CHANGELOG.rst  CLAUDE.md  LICENSE  PR.md  README.md  TODO_ENDPOINT_VERSIONING.md  galaxy.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  auto_assign.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: Bug_Report.md  Feature_Request.md  bug_report.yml  documentation_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ansible-test.yml  certification.yml  changelog-generation.yml  codeql-analysis.yml  jira-issue-sync.yml
changelogs/: changelog.yaml  config.yaml
docs/: README_OPENAPI_SCHEMA_MCP_SERVER.md
meta/: runtime.yml
plugins/action/: __init__.py  nd_action_base.py  nd_inventory_validate.py  nd_links.py  nd_switches_validate.py
plugins/callback/: nd_session_cleanup.py
plugins/doc_fragments/: check_mode.py  modules.py  ndi_compliance_base.py
plugins/httpapi/: nd.py
plugins/module_utils/: constants.py  enums.py  fabric_context.py  log.py  logging_config.json  nd.py  nd_argument_specs.py  nd_config_collection.py  nd_network_resources.py  nd_output.py  nd_policy_resources.py  nd_state_machine.py  nd_switch_resources.py  nd_v2.py  ndi.py  ndi_argument_specs.py  protocol_response_handler.py  protocol_response_validation.py  protocol_sender.py  pydantic_compat.py  response_handler_nd.py  response_validation_nd_v1.py  rest_send.py  results.py  sender_file.py  sender_nd.py  types.py  (+1 more)
(+558 files in other folders)
